--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Shop - Best Selling Products</title>
+    <title>Calmify</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -111,7 +111,7 @@
                     <h3>Get In Touch</h3>
                     <p>We're here to help with any questions about our products.</p>
                     <div class="contact-details">
-                        <p><strong>Email:</strong> info@modernshop.com</p>
+                        <p><strong>Email:</strong> info@calmify.com</p>
                         <p><strong>Phone:</strong> +1 (555) 123-4567</p>
                         <p><strong>Address:</strong> 123 Commerce St, City, State 12345</p>
                     </div>
@@ -157,7 +157,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 ModernShop. All rights reserved.</p>
+            <p>&copy; 2025 Calmify. All rights reserved.</p>
         </div>
     </footer>
 
